product工程, category controller獲取3級分類(tree); gateway工程配置路由, 統一處理CROS

--- a/vicstore-gateway/src/main/resources/application.yml
+++ b/vicstore-gateway/src/main/resources/application.yml
@@ -11,3 +11,20 @@ spring:
           uri: https://www.yahoo.com
           predicates:
             - Query=url,yahoo
+
+
+        - id: product
+          uri: lb://service-pms
+          predicates:
+            - Path=/api/product/**
+          filters:
+            - RewritePath=/api/product/(?<segment>.*),/product/$\{segment}
+
+
+        - id: admin_route
+          uri: lb://renren-fast
+          predicates:
+            - Path=/api/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
+
