CategoryController     -/product/category/delete     -配置全局邏輯刪除規則
​	-配置邏輯刪除組件bean

​	-@TableLogic(value="",delval="")

-common 配置swagger(依賴, configuration), application添加	@EnableSwaggers

--- a/vicstore-product/src/main/resources/application.properties
+++ b/vicstore-product/src/main/resources/application.properties
@@ -10,6 +10,12 @@ mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 #主鍵自增
 mybatis-plus.global-config.dbconfig.id-type=auto
 
+#邏輯刪除
+mybatis-plus.global-config.dbconfig.logic-delete-field=show_status
+mybatis-plus.global-config.dbconfig.logic-delete-value=1
+mybatis-plus.global-config.dbconfig.logic-not-delete-value=0
+
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # 服務端口
 server.port=7000
