--- a/vicstore-product/pom.xml
+++ b/vicstore-product/pom.xml
@@ -46,6 +46,13 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+			<version>2.8.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
